Added Spring Security and split business logic into separate services