@@ -2,16 +2,16 @@ package com.brandonbinks.weatherapp.weather_app.service;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneOffset;
+import java.util.Optional;
 
+import com.brandonbinks.weatherapp.weather_app.model.WeatherEntity;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -21,7 +21,6 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 
 import com.brandonbinks.weatherapp.weather_app.client.OpenWeatherMapClient;
 import com.brandonbinks.weatherapp.weather_app.exception.ApiKeyLimitExceededException;
-import com.brandonbinks.weatherapp.weather_app.exception.InvalidApiKeyException;
 import com.brandonbinks.weatherapp.weather_app.exception.MissingFieldException;
 import com.brandonbinks.weatherapp.weather_app.model.WeatherResponse;
 import com.brandonbinks.weatherapp.weather_app.model.WeatherResponse.Weather;
@@ -42,13 +41,16 @@ public class WeatherServiceTest {
     @MockBean
     private Clock clock;
 
+    @MockBean
+    private ApiService apiService;
+
     @BeforeEach
     public void setup() {
         Instant fixedInstant = Instant.parse("2024-07-24T10:00:00Z");
         when(clock.instant()).thenReturn(fixedInstant);
         when(clock.getZone()).thenReturn(ZoneOffset.UTC);
     }
-    
+
     @Test
     public void testGetWeather(){
         WeatherResponse.Weather weather = new WeatherResponse.Weather();
@@ -60,15 +62,9 @@ public class WeatherServiceTest {
         when(openWeatherMapClient.getWeather(Mockito.anyString(), Mockito.anyString())).thenReturn(response);
 
         WeatherResponse result = weatherService.getWeather("London", "UK", "API_KEY_1");
-        assertEquals("clear sky", result.getWeather().get(0).getDescription());
+        assertEquals("clear sky", result.getWeather().getFirst().getDescription());
     }
 
-    @Test
-    public void testInvalidApiKey(){
-        Exception exception = assertThrows(InvalidApiKeyException.class, () -> 
-                weatherService.getWeather("London", "UK", "INVALID_API_KEY"));
-        assertEquals("Invalid API Key.", exception.getMessage());
-    }
 
     @Test
     public void testApiKeyRateLimitException(){
@@ -80,13 +76,6 @@ public class WeatherServiceTest {
         assertEquals("Hourly limit exceeded.", exception.getMessage());
     }
 
-    @Test
-    public void testNoWeatherDataReturned() {
-        when(openWeatherMapClient.getWeather(Mockito.anyString(), Mockito.anyString())).thenReturn(new WeatherResponse());
-
-        WeatherResponse result = weatherService.getWeather("London", "UK", "API_KEY_3");
-        assertNull(result.getWeather());
-    }
 
     @Test
     public void testWeatherDataStoredInDatabase() {
@@ -128,6 +117,53 @@ public class WeatherServiceTest {
         Exception exception = assertThrows(MissingFieldException.class, () ->
                 weatherService.getWeather("London", "", "API_KEY_4"));
         assertEquals("Country field is missing.", exception.getMessage());
+    }
+
+    @Test
+    public void testUpdateWeatherData() {
+        Weather weather = new Weather();
+        weather.setDescription("clear sky");
+
+        WeatherResponse response = new WeatherResponse();
+        response.setWeather(List.of(weather));
+
+        WeatherEntity weatherEntity = new WeatherEntity("London", "UK", "rain");
+        when(weatherRepository.findByCityAndCountry("London", "UK")).thenReturn(Optional.of(weatherEntity));
+
+        weatherService.updateWeatherData("London", "UK", response);
+
+        Mockito.verify(weatherRepository, Mockito.times(1)).save(weatherEntity);
+        assertEquals("clear sky", weatherEntity.getDescription());
+    }
+
+    @Test
+    public void testCheckDatabaseForWeather() {
+        WeatherEntity weatherEntity = new WeatherEntity("London", "UK", "clear sky");
+
+        when(weatherRepository.findByCityAndCountry("London", "UK")).thenReturn(Optional.of(weatherEntity));
+
+        WeatherResponse result = weatherService.checkDatabaseForWeather("London", "UK");
+        assertEquals("clear sky", result.getWeather().getFirst().getDescription());
+    }
+
+    @Test
+    public void testGetWeatherFromDatabase() {
+        Weather weather = new Weather();
+        weather.setDescription("clear sky");
+
+        WeatherResponse response = new WeatherResponse();
+        response.setWeather(List.of(weather));
+
+        when(openWeatherMapClient.getWeather(Mockito.anyString(), Mockito.anyString())).thenReturn(response);
+
+        WeatherEntity weatherEntity = new WeatherEntity("London", "UK", "clear sky");
+        when(weatherRepository.findByCityAndCountry("London", "UK")).thenReturn(Optional.of(weatherEntity));
+
+        WeatherResponse result = weatherService.getWeather("London", "UK", "API_KEY_1");
+        assertEquals("clear sky", result.getWeather().getFirst().getDescription());
+
+        // Verify that OpenWeatherMapClient was called
+        Mockito.verify(openWeatherMapClient, Mockito.times(1)).getWeather(Mockito.anyString(), Mockito.anyString());
     }
 
 }
